--- a/GazeChim/ClientApp/src/index.html
+++ b/GazeChim/ClientApp/src/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="bower_components/angular-timeline/dist/angular-timeline.css"/>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
+
 </head>
 <body>
   <app-root></app-root>
